content/ops-manager/v8.0/source/includes/possibleValues-api-measurements-host.rst
.. This file is shared by
   /reference/api/alerts.txt
   /reference/api/global-alerts.txt
   /reference/api/measurements.txt

Host Measurements
~~~~~~~~~~~~~~~~~

.. list-table::
   :widths: 40 60

   * - - ``ASSERT_REGULAR``
       - ``ASSERT_WARNING``
       - ``ASSERT_MSG``
       - ``ASSERT_USER``

     - Rate of asserts for a MongoDB process found in the 
       ``asserts`` document that the
       :dbcommand:`serverStatus`
       command generates.

   * - - ``BACKGROUND_FLUSH_AVG``

     - Amount of data flushed in the background.

   * - - ``CACHE_BYTES_READ_INTO``
       - ``CACHE_BYTES_WRITTEN_FROM``
       - ``CACHE_DIRTY_BYTES``
       - ``CACHE_USED_BYTES``
       - ``TICKETS_AVAILABLE_READS``
       - ``TICKETS_AVAILABLE_WRITE``

     - Amount of bytes in the :ref:`WiredTiger <storage-wiredtiger>`
       storage engine cache and tickets found in the
       ``wiredTiger.cache`` and
       ``wiredTiger.concurrentTransactions`` documents
       that the
       :dbcommand:`serverStatus`
       command generates.

   * - - ``CACHE_FILL_RATIO``

     - Measures how full the :ref:`WiredTiger <storage-wiredtiger>` 
       cache is. The calculation divides the bytes currently in the 
       cache by the maximum bytes configured and returns a percentage. 
       A ratio close to 100% indicates that the query working set 
       exceeds the configured cache size. Increasing the cache size 
       can reduce disk I/O.

   * - - ``DIRTY_FILL_RATIO``

     - The proportion of dirty bytes (pages modified in memory
       but not yet persisted to disk) relative to the total
       WiredTiger cache. A high dirty fill ratio indicates that
       a significant amount of modified data has not yet been
       flushed to disk. This condition can affect performance.
       Monitor this metric for write-heavy workloads to ensure
       data durability.

   * - - ``CONNECTIONS``

     - Number of connections to a MongoDB process found in the
       ``connections`` document that the
       :dbcommand:`serverStatus`
       command generates.

   * - - ``CURSORS_TOTAL_OPEN``
       - ``CURSORS_TOTAL_TIMED_OUT``

     - Number of :ref:`cursors` for a MongoDB
       process found in the ``metrics.cursor`` document 
       that the 
       :dbcommand:`serverStatus`
       command generates.

   * - - ``EXTRA_INFO_PAGE_FAULTS``
       - ``GLOBAL_ACCESSES_NOT_IN_MEMORY``
       - ``GLOBAL_PAGE_FAULT_EXCEPTIONS_THROWN``

     - Numbers of ``Memory Issues`` and ``Page Faults`` for a MongoDB
       process.

   * - - ``GLOBAL_LOCK_CURRENT_QUEUE_TOTAL``
       - ``GLOBAL_LOCK_CURRENT_QUEUE_READERS``
       - ``GLOBAL_LOCK_CURRENT_QUEUE_WRITERS``

     - Number of operations waiting on locks for the MongoDB process
       that the 
       :dbcommand:`serverStatus` 
       command generates. |mms| computes these values based on the
       type of storage engine.

   * - - ``INDEX_COUNTERS_BTREE_ACCESSES``
       - ``INDEX_COUNTERS_BTREE_HITS``
       - ``INDEX_COUNTERS_BTREE_MISSES``
       - ``INDEX_COUNTERS_BTREE_MISS_RATIO``

     - Number of index btree operations.

   * - - ``JOURNALING_COMMITS_IN_WRITE_LOCK``
       - ``JOURNALING_MB``
       - ``JOURNALING_WRITE_DATA_FILES_MB``

     - Number of journaling operations.

   * - - ``MEMORY_RESIDENT``
       - ``MEMORY_VIRTUAL``
       - ``MEMORY_MAPPED``
       - ``COMPUTED_MEMORY``

     - Amount of memory for a MongoDB process found in the
       ``mem`` document that the
       :dbcommand:`serverStatus` command collects.

   * - - ``NETWORK_BYTES_IN``
       - ``NETWORK_BYTES_OUT``
       - ``NETWORK_NUM_REQUESTS``

     - Amount of throughput for MongoDB process found in the
       ``network`` document that the 
       :dbcommand:`serverStatus` command collects.

   * - - ``OPLOG_REPLICATION_LAG_TIME``
       - ``OPLOG_RATE_GB_PER_HOUR``
       - ``OPLOG_MASTER_TIME``
       - ``OPLOG_MASTER_LAG_TIME_DIFF``

     - Durations and throughput of the MongoDB process'
       :ref:`oplog <replica-set-oplog>`.

       The ``OPLOG_SLAVE_LAG_MASTER_TIME`` metric is deprecated in the
       measurement API. Use the ``OPLOG_REPLICATION_LAG_TIME`` metric
       instead. It returns decimal values (seconds and milliseconds).
       For example, the value 2.75 means 2 seconds and 750 milliseconds.

       The deprecation applies only to the measurement API. For alert
       configurations, continue to use ``OPLOG_SLAVE_LAG_MASTER_TIME``.

   * - - ``DB_STORAGE_TOTAL``

     - Sum total of the compressed on-disk storage space allocated for 
       document storage across all databases.
   
   * - - ``DB_INDEX_SIZE_TOTAL``
     
     - Sum total of the logical size in bytes (including prefix compression) of 
       the index data across all databases.

   * - - ``DB_DATA_SIZE_TOTAL``

     - Sum total of the uncompressed document data in bytes (including 
       the padding factor) across all databases including system databases.
  
   * - - ``DB_DATA_SIZE_TOTAL_WO_SYSTEM``

     - Sum total of the uncompressed document data in bytes (including 
       the padding factor) across non-system databases.

   * - - ``OPCOUNTER_CMD``
       - ``OPCOUNTER_QUERY``
       - ``OPCOUNTER_UPDATE``
       - ``OPCOUNTER_DELETE``
       - ``OPCOUNTER_GETMORE``
       - ``OPCOUNTER_INSERT``

     - Rate of database operations on a MongoDB process since the
       process last started found in the ``opcounters`` document that the 
       :dbcommand:`serverStatus` command collects.

   * - - ``OPCOUNTER_REPL_CMD``
       - ``OPCOUNTER_REPL_UPDATE``
       - ``OPCOUNTER_REPL_DELETE``
       - ``OPCOUNTER_REPL_INSERT``

     - Rate of database operations on MongoDB
       :term:`secondaries <secondary>` found in the
       ``opcountersRepl`` document that the
       :dbcommand:`serverStatus`
       command collects.

   * - - ``DOCUMENT_METRICS_RETURNED``
       - ``DOCUMENT_METRICS_INSERTED``
       - ``DOCUMENT_METRICS_UPDATED``
       - ``DOCUMENT_METRICS_DELETED``

     - Average rate of documents returned, inserted, updated, or
       deleted per second during a selected time period.

   * - - ``OPERATIONS_SCAN_AND_ORDER``

     - Average rate for operations per second during a selected time
       period that perform a sort but cannot perform the sort using an
       index.

   * - - ``OP_EXECUTION_TIME_READS``
       - ``OP_EXECUTION_TIME_WRITES``
       - ``OP_EXECUTION_TIME_COMMANDS``

     - Average execution time in milliseconds per read, write, or
       command operation during a selected time period.

       *Available to hosts running MongoDB 3.4 or later.*

   * - - ``RESTARTS_IN_LAST_HOUR``

     - Number of times the host restarted within the previous hour.

   * - - ``SYSTEM_MEMORY_USED``
       - ``SYSTEM_MEMORY_FREE``
       - ``SYSTEM_MEMORY_AVAILABLE``

     - Physical memory usage, in bytes.

   * - - ``SYSTEM_NETWORK_BYTES_IN``
       - ``SYSTEM_NETWORK_BYTES_OUT``

     - Network throughput in bytes per second.

   * - - ``SWAP_USAGE_USED``
       - ``SWAP_USAGE_FREE``

     - Total amount swap space in use.
